<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    tools:context=".Admin_Ui.accesscontrol.accesscontrol_ItemFragment">

    <TextView
        android:id="@+id/accesscontrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="Add Access Control"
        android:textColor="@color/third"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/position"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="297dp"
        android:text="Position"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/positionbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/positionbox"
        app:layout_constraintTop_toBottomOf="@+id/accesscontrol" />

    <TextView
        android:id="@+id/documenttype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="228dp"
        android:text="Document Type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/doctypebox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/doctypebox"
        app:layout_constraintTop_toBottomOf="@+id/positionbox" />

    <TextView
        android:id="@+id/accesstype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="256dp"
        android:text="Access Type"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/documenttypenamebox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/documenttypenamebox"
        app:layout_constraintTop_toBottomOf="@+id/doctypebox"
        tools:ignore="DuplicateIds" />

    <Spinner
        android:id="@+id/positionbox"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/round_border"
        android:paddingStart="20dp"
        android:paddingTop="13dp"
        android:paddingEnd="0dp"
        android:paddingBottom="13dp"
        android:prompt="@string/promptPos"
        app:layout_constraintBottom_toTopOf="@+id/documenttype"
        app:layout_constraintEnd_toEndOf="@+id/accesscontrol"
        app:layout_constraintStart_toStartOf="@+id/accesscontrol"
        app:layout_constraintTop_toBottomOf="@+id/position" />

    <Spinner
        android:id="@+id/doctypebox"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/round_border"
        android:paddingStart="20dp"
        android:paddingTop="13dp"
        android:paddingEnd="0dp"
        android:paddingBottom="13dp"
        android:prompt="@string/promptDocType"
        app:layout_constraintBottom_toTopOf="@+id/accesstype"
        app:layout_constraintEnd_toEndOf="@+id/positionbox"
        app:layout_constraintStart_toStartOf="@+id/positionbox"
        app:layout_constraintTop_toBottomOf="@+id/documenttype" />

    <Spinner
        android:id="@+id/documenttypenamebox"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/round_border"
        android:paddingStart="20dp"
        android:paddingTop="13dp"
        android:paddingEnd="0dp"
        android:paddingBottom="13dp"
        android:prompt="@string/promptAccessType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/doctypebox"
        app:layout_constraintStart_toStartOf="@+id/doctypebox"
        app:layout_constraintTop_toBottomOf="@+id/accesstype" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="130dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#0EC516"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintStart_toStartOf="@+id/documenttypenamebox"
        app:layout_constraintTop_toBottomOf="@+id/documenttypenamebox" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="130dp"
        android:layout_height="54dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#F44336"
        android:text="Cancel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/documenttypenamebox"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        app:layout_constraintTop_toBottomOf="@+id/documenttypenamebox" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="107dp"
        android:layout_height="90dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="152dp"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toTopOf="@+id/accesscontrol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/third" />
</androidx.constraintlayout.widget.ConstraintLayout>