<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="Picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topView"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#17ACEF"
        android:text="@string/addUserText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPass"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:text="@string/addUserText"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signUpUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/round_border"
        android:drawableStart="@android:drawable/ic_menu_sort_alphabetically"
        android:drawablePadding="16dp"
        android:drawableTint="#000000"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="#000000"
        android:textColorHint="#7E7575"
        app:layout_constraintBottom_toTopOf="@+id/signUpEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/round_border"
        android:drawableStart="@android:drawable/sym_action_email"
        android:drawablePadding="16dp"
        android:drawableTint="#B2000000"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="#0E0D0D"
        android:textColorHint="#7E7575"
        app:layout_constraintBottom_toTopOf="@+id/signUpFullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpUsername" />

    <EditText
        android:id="@+id/signUpFullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/round_border"
        android:drawableStart="@android:drawable/ic_menu_my_calendar"
        android:drawablePadding="16dp"
        android:drawableTint="#020202"
        android:ems="10"
        android:hint="@string/Fullname"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="#0E0D0D"
        android:textColorHint="#7E7575"
        app:layout_constraintBottom_toTopOf="@+id/positionAddUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail" />

    <Spinner
        android:id="@+id/positionAddUser"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/round_border"
        android:dropDownSelector="@color/white"
        android:entries="@array/positions"
        android:padding="16dp"
        android:prompt="@string/promptPos"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/signUpPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpFullname"
        tools:focusableInTouchMode="false" />

    <EditText
        android:id="@+id/signUpPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/round_border"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="text"
        android:padding="16dp"
        android:password="true"
        android:textColor="#0E0D0D"
        android:textColorHint="#7E7575"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionAddUser" />

</androidx.constraintlayout.widget.ConstraintLayout>